--- a/.github/workflows/ch3_basic_3.yml
+++ b/.github/workflows/ch3_basic_3.yml
@@ -17,5 +17,5 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKERHUB_USER }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        username: ${{ secrets.DOCKEDR_ID }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
