--- a/.github/workflows/ch3_basic_3.yml
+++ b/.github/workflows/ch3_basic_3.yml
@@ -9,11 +9,11 @@ jobs:
     - id: checkout
       name: Checkout 
       uses: actions/checkout@v2
-    - id: build-test
-      name: Run npm build
-      run: |
-        npm ci
-        npm run build
+    # - id: build-test
+    #   name: Run npm build
+    #   run: |
+    #     npm ci
+    #     npm run build
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
