--- a/.github/workflows/aws_ssh.yml
+++ b/.github/workflows/aws_ssh.yml
@@ -41,7 +41,7 @@ jobs:
           username: ${{ secrets.SSH_DEV_USER }}
           key: ${{ secrets.SSH_DEV_KEY }}
           script: |
-            echo 'Hello!
+            echo 'Hello!'
             ls -al
 
       - name: Remove Github Actions IP from security group # EC2 인스턴스 인바운드 규칙 제거
